; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/s390/mm/extr_cmm.c_cmm_timer_fn.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/s390/mm/extr_cmm.c_cmm_timer_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cmm_timed_pages_target = common dso_local global i64 0, align 8
@cmm_timeout_pages = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @cmm_timer_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cmm_timer_fn(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* @cmm_timed_pages_target, align 8
  %5 = load i64, i64* @cmm_timeout_pages, align 8
  %6 = sub nsw i64 %4, %5
  store i64 %6, i64* %3, align 8
  %7 = load i64, i64* %3, align 8
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i64 0, i64* @cmm_timed_pages_target, align 8
  br label %12

10:                                               ; preds = %1
  %11 = load i64, i64* %3, align 8
  store i64 %11, i64* @cmm_timed_pages_target, align 8
  br label %12

12:                                               ; preds = %10, %9
  %13 = call i32 (...) @cmm_kick_thread()
  %14 = call i32 (...) @cmm_set_timer()
  ret void
}

declare dso_local i32 @cmm_kick_thread(...) #1

declare dso_local i32 @cmm_set_timer(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
